--- a/sample.html
+++ b/sample.html
@@ -1,12 +1,12 @@
 <html>
   <head>
-    <title>Backbone VirtualCollection</title>
+    <title>Chaplin VirtualCollection</title>
     <script src="node_modules/underscore/underscore.js"></script>
-    <script src="node_modules/backbone/backbone.js"></script>
-    <script src="dist/backbone.virtual-collection.js"></script>
+    <script src="node_modules/chaplin/chaplin.js"></script>
+    <script src="dist/chaplin.virtual-collection.js"></script>
     <script type="text/javascript" charset="utf-8">
 
-      var houses = new Backbone.Collection([
+      var houses = new Chaplin.Collection([
         {color: 'white', with_garden: true},
         {color: 'white', with_garden: false},
         {color: 'red', with_garden: false},
